# Medidor

./: CMakeLists.txt  blink.c  teste.py
ala/: motor_bom_dom0.txt  motor_bom_dom1.txt  motor_bom_dom2.txt  motor_bom_dom3.txt  motor_ruim_dom0.txt  motor_ruim_dom1.txt  motor_ruim_dom2.txt  motor_ruim_dom3.txt
